foundations/aws/us-east-2/sandbox/cf-for-k8s-demo/cluster/config-optional/harbor-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-virtual-service
  namespace: harbor
spec:
  hosts:
    - harbor.cf.gershman.io
  gateways:
    - cf-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: harbor.harbor.svc.cluster.local
            port:
              number: 80
